(fix:embed) Truncate overflowing text

--- a/src/css/components/EmbedPlayer.scss
+++ b/src/css/components/EmbedPlayer.scss
@@ -10,6 +10,10 @@
     box-sizing: border-box;
 
     user-select: none;
+
+    p {
+        margin: 0;
+    }
 }
 
 .EmbedPlayer_Content {
@@ -45,7 +49,18 @@
     margin-top: 5px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     color: white;
+    text-overflow: ellipsis;
+}
+
+.EmbedPlayer_Label {
+    width: 310px;
+    font-size: 16px;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .EmbedPlayer_ProgressBar {
@@ -62,7 +77,7 @@
 
 .EmbedPlayer_Actions {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     gap: 6px;
 }
 
